// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`componente GastosSumario con multiples gastos 1`] = `
<div>
  <h2>
    viendo -
    2
    gastos
     - total
    $1,209,329.29
  </h2>
</div>
`;

exports[`componente GastosSumario con un gasto 1`] = `
<div>
  <h2>
    viendo -
    1
    gasto
     - total
    $1.20
  </h2>
</div>
`;
